src/Test/Fixtures/Good/Arrays/paramArrayDeclaration.lf
let params: [param; 2] = [Param("theta"), Param("phi")];