src/Test/Fixtures/Bad/Arrays/unexpectedTrailingCommaAfterQallocInitializer.lf
let qs : [qubit; 2] = qalloc(2),;